// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components | app-header | index snapshot doit correspondre quand l'user est connecté en mode desktop 1`] = `
<WithStyles(AppBar)
  position="relative"
>
  <WithStyles(Toolbar)
    classes={
      Object {
        "root": "AppHeader-toolbarRoot-7",
      }
    }
  >
    <WithStyles(HeaderMenuButton) />
    <WithStyles(Typography)
      classes={
        Object {
          "root": "AppHeader-titleRoot-6",
        }
      }
      component="div"
    >
      <span>
        <span
          className="AppHeader-lighterMobileTitle-3"
        >
          LEXIMPACT 
        </span>
      </span>
    </WithStyles(Typography)>
    <WithStyles(LoginButtonMobile)
      isUserLogged={true}
    />
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;

exports[`components | app-header | index snapshot doit correspondre quand l'user est connecté en mode mobile 1`] = `
<WithStyles(AppBar)
  position="relative"
>
  <WithStyles(Toolbar)
    classes={
      Object {
        "root": "AppHeader-toolbarRoot-7",
      }
    }
  >
    <WithStyles(HeaderMenuButton) />
    <WithStyles(Typography)
      classes={
        Object {
          "root": "AppHeader-titleRoot-6",
        }
      }
      component="div"
    >
      <span>
        <span
          className="AppHeader-lighterMobileTitle-3"
        >
          LEXIMPACT 
        </span>
      </span>
    </WithStyles(Typography)>
    <WithStyles(LoginButtonMobile)
      isUserLogged={true}
    />
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;

exports[`components | app-header | index snapshot doit correspondre quand l'user n'est pas connecté en mode desktop 1`] = `
<WithStyles(AppBar)
  position="relative"
>
  <WithStyles(Toolbar)
    classes={
      Object {
        "root": "AppHeader-toolbarRoot-7",
      }
    }
  >
    <WithStyles(HeaderMenuButton) />
    <WithStyles(Typography)
      classes={
        Object {
          "root": "AppHeader-titleRoot-6",
        }
      }
      component="div"
    >
      <div>
        <div
          className="AppHeader-lighterTitle-4"
        >
          LEXIMPACT 
        </div>
      </div>
    </WithStyles(Typography)>
    <WithStyles(LoginButton)
      isUserLogged={false}
    />
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;

exports[`components | app-header | index snapshot doit correspondre quand l'user n'est pas connecté en mode mobile 1`] = `
<WithStyles(AppBar)
  position="relative"
>
  <WithStyles(Toolbar)
    classes={
      Object {
        "root": "AppHeader-toolbarRoot-7",
      }
    }
  >
    <WithStyles(HeaderMenuButton) />
    <WithStyles(Typography)
      classes={
        Object {
          "root": "AppHeader-titleRoot-6",
        }
      }
      component="div"
    >
      <span>
        <span
          className="AppHeader-lighterMobileTitle-3"
        >
          LEXIMPACT 
        </span>
      </span>
    </WithStyles(Typography)>
    <WithStyles(LoginButtonMobile)
      isUserLogged={false}
    />
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;
